trying to fix footer bkg not showing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -46,9 +46,6 @@
   --dark-parchment: rgb(238 228 213 / 0.72);
   --dark-parchment-2: #d3c9bc;
   --extra-dark-parchment: rgb(238 228 213 / 0.52);
-  --footer-text: #5F6470;
-  --footer-text-2: #626771;
-  --footer-text-3: #7D828C;
   --brown: #3b2721;
   --brown-dark: #31211C;
   --brown-ink: #46372d;
